fix error messages

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         </ul>
         <h2><u>New Champ Designs</u></h2>
         <h3><b>Zoomink</b></h3>
-        <img src="images/Zoomink_Champion.PNG" height="200px" width="200px"> 
+        <img src="images/Zoomink_Champion.PNG" height="200" width="200" alt="pink-squid"> 
         <br>
-        <audio controls src="Zoomink Audio.mp3"></audio>
+        <audio controls src="ZoominkAudio.mp3"></audio>
         <br>
-        <video controls src="ZoominkIntro.mp4" width="250px"></video>
+        <video controls src="ZoominkIntro.mp4" width="250"></video>
         <br>
         <label for="champ-select">Which champion makes the cut?</label>
         <select name="Champion" id="champ-select">
