Added additional html reqs

--- a/index.html
+++ b/index.html
@@ -1,57 +1,83 @@
 <!DOCTYPE html>
 <html lang = "en">
     <head>
+        <meta charset="utf-8">
         <title>Champion Meeting Minutes</title>
-        <h1>New Champion Ideas</h1>
-        <h2>September 3, 2021</h2>
-        <hr>
+        <link rel="icon" href="images/favicon-16x16.png"/>
     </head>
     <body>
+        <header>
+            <h1>New Champion Ideas</h1>
+            <h2>September 3, 2021</h2>
+        </header>
+        <hr>
         <h2><u>Attendance</u></h2>
         <ul>
             <li>Nick</li>
             <li>Sofia</li>
             <li>Rene</li>
         </ul>
-        <h2><u>Agenda</u></h2>
-        <ol>
-            <li>Brainstorm Champion Ideas</li>
-            <li>Narrow Ideas Down</li>
-            <li>Lore Ideas</li>
-            <li>Champion Design</li>
-            <li>Champion Abilities</li>
-            <li>Champion Voice Lines</li>
-            <li>Summarize</li>
-        </ol>
-        <h2><u>Unfinished Discussion</u></h2>
-        <ul>
-            <li>Inclusiveness of Champion Design</li>
-            <li>Expanding on Old Champion Lore</li>
-        </ul>
-        <h2><u>New Business</u></h2>
-        <ul>
-            <li>Creating New Champions</li>
-            <li>Brainstorming New Lore</li>
-            <li>Designing Champion and Abilities</li>
-        </ul>
-        <h2><u>Questions/Comments</u></h2>
-        <ul>
-            <li>Should the lore branch from old lore?</li>
-            <li>Can we introduce an entirely new kingdom?</li>
-            <li>More yordles?</li>
-        </ul>
-        <h2><u>New Champ Designs</u></h2>
-        <h3><b>Zoomink</b></h3>
-        <img src="images/Zoomink_Champion.PNG" height="200" width="200" alt="pink-squid"> 
+        <main>
+            <h2><u>Agenda</u></h2>
+            <ol>
+                <li>Brainstorm Champion Ideas</li>
+                <li>Narrow Ideas Down</li>
+                <li>Lore Ideas</li>
+                <li>Champion Design</li>
+                <li>Champion Abilities</li>
+                <li>Champion Voice Lines</li>
+                <li>Summarize</li>
+            </ol>
+            <h2><u>Unfinished Discussion</u></h2>
+            <ul>
+                <li><strong>Inclusiveness of Champion Design</strong></li>
+                <li>Expanding on Old Champion Lore</li>
+            </ul>
+            <h2><u>New Business</u></h2>
+            <ul>
+                <li>Creating New Champions</li>
+                <li>Brainstorming New Lore</li>
+                <li>Designing Champion and Abilities</li>
+            </ul>
+            <h2><u>Questions/Comments</u></h2>
+            <ul>
+                <li>Should the lore branch from old lore?</li>
+                <li>Can we introduce an entirely new kingdom?</li>
+                <li><i>More yordles!</i></li>
+            </ul>
+            <section>
+                <div class="Zoom">
+                    <h2><u>New Champ Designs</u></h2>
+                    <h3><b>Zoomink</b></h3>
+                    <p>Zoomink will be <em>very zoomy fast</em> and ink at her opponents!</p>
+                    <img src="images/Zoomink_Champion.PNG" height="200" width="200" alt="pink-squid"> 
+                    <br>
+                    <audio controls src="ZoominkAudio.mp3"></audio>
+                    <br>
+                    <video controls src="ZoominkIntro.mp4" width="250"></video>
+                </div>
+            </section>
+            <br>
+            <label for="champ-select">Which champion makes the cut?</label>
+            <select name="Champion" id="champ-select">
+                <option value="">--Select a Champion--</option>
+                <option value="Zoomink">Zoomink</option>
+            </select>
+        </main>
         <br>
-        <audio controls src="ZoominkAudio.mp3"></audio>
-        <br>
-        <video controls src="ZoominkIntro.mp4" width="250"></video>
-        <br>
-        <label for="champ-select">Which champion makes the cut?</label>
-        <select name="Champion" id="champ-select">
-            <option value="">--Select a Champion--</option>
-            <option value="Zoomink">Zoomink</option>
-        </select>
+        <footer>
+            <details>
+                <summary>Summary</summary>
+                Zoomink is going to be the best champion yet!
+            </details>
+            <label for="navigation"><u>Riot HyperLinks</u></label>
+            <nav id="navigation">
+                <ul>
+                    <li><a href="https://www.riotgames.com/en">Riot Homepage</a></li>
+                    <li><a href="https://www.leagueoflegends.com/en-us/">League of Legends Homepage</a></li>
+                </ul>
+
+            </nav>
+        </footer>
     </body>
 </html>
