Fix label error

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 <summary>Summary</summary>
                 Zoomink is going to be the best champion yet!
             </details>
-            <label for="navigation"><u>Riot HyperLinks</u></label>
-            <nav id="navigation">
+            <label for="HyperLinks"><u>Riot HyperLinks</u></label>
+            <nav id="HyperLinks">
                 <ul>
                     <li><a href="https://www.riotgames.com/en">Riot Homepage</a></li>
                     <li><a href="https://www.leagueoflegends.com/en-us/">League of Legends Homepage</a></li>
