--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang = "en">
     <head>
+        <style>
+            body{
+                background-color: #1f1f1f;
+                color: white;
+                font-family: 'Mark Pro',Arial,sans-serif;
+            }
+        </style>
         <meta charset="utf-8">
         <title>Champion Meeting Minutes</title>
         <link rel="icon" href="images/favicon-16x16.png"/>
+        <link rel="stylesheet" href="riotMeet.css">
     </head>
     <body>
         <header>
-            <h1>New Champion Ideas</h1>
-            <h2>October 3, 2021</h2>
+            <img src="images/riot-games-logo.png" alt="riot logo" id="logo">
+            <h1 style="color: #d22a36;">New Champion Ideas</h1>
+            <h2 id="date">October 3, 2021</h2>
         </header>
         <hr>
         <h2><u>Attendance</u></h2>
@@ -19,14 +28,14 @@
         </ul>
         <main>
             <h2><u>Agenda</u></h2>
-            <ol>
-                <li>Brainstorm Champion Ideas</li>
-                <li>Narrow Ideas Down</li>
-                <li>Lore Ideas</li>
-                <li>Champion Design</li>
-                <li>Champion Abilities</li>
-                <li>Champion Voice Lines</li>
-                <li>Summarize</li>
+            <ol class="grid">
+                <li id="gridItem">Brainstorm Champion Ideas</li>
+                <li id="gridItem">Narrow Ideas Down</li>
+                <li id="gridItem">Lore Ideas</li>
+                <li id="gridItem">Champion Design</li>
+                <li id="gridItem">Champion Abilities</li>
+                <li id="gridItem">Champion Voice Lines</li>
+                <li id="gridItem">Summarize</li>
             </ol>
             <h2><u>Unfinished Discussion</u></h2>
             <ul>
@@ -40,29 +49,32 @@
                 <li>Designing Champion and Abilities</li>
             </ul>
             <h2><u>Questions/Comments</u></h2>
-            <ul>
-                <li>Should the lore branch from old lore?</li>
-                <li>Can we introduce an entirely new kingdom?</li>
-                <li><i>More yordles!</i></li>
+            <ul class="list">
+                <li class="listItem">Should the lore branch from old lore?</li>
+                <li class="listItem">Can we introduce an entirely new kingdom?</li>
+                <li class="listItem"><i>More yordles!</i></li>
             </ul>
             <section>
                 <div class="Zoom">
-                    <h2><u>New Champ Designs</u></h2>
-                    <h3><b>Zoomink</b></h3>
+                    <h2 id="newChamp">New Champ Designs</h2>
+                    <h3 style="text-decoration: blink;" id="newZoom"><b>Zoomink</b></h3>
                     <p>Zoomink will be <em>very zoomy fast</em> and ink at her opponents!</p>
-                    <img src="images/Zoomink_Champion.PNG" height="200" width="200" alt="pink-squid"> 
+                    <img src="images/Zoomink_Champion.PNG" height="200" width="200" alt="pink-squid" id="zoompic"> 
                     <br>
                     <audio controls src="ZoominkAudio.mp3"></audio>
                     <br>
-                    <video controls src="ZoominkIntro.mp4" width="250"></video>
+                    <video controls src="ZoominkIntro.mp4" width="250" id="vidMeet"></video>
                 </div>
             </section>
             <br>
-            <label for="champ-select">Which champion makes the cut?</label>
-            <select name="Champion" id="champ-select">
-                <option value="">--Select a Champion--</option>
-                <option value="Zoomink">Zoomink</option>
-            </select>
+            <form>
+                <label for="champ-select">Which champion makes the cut?</label>
+                <select name="Champion" id="champ-select">
+                    <option value="">--Select a Champion--</option>
+                    <option value="Zoomink">Zoomink</option>
+                    <input type="submit" id="submit">
+                </select>
+            </form>
         </main>
         <br>
         <footer>
