finished adding all css selectors

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <main>
             <h2><u>Agenda</u></h2>
             <ol class="grid">
-                <li id="gridItem">Brainstorm Champion Ideas</li>
-                <li id="gridItem">Narrow Ideas Down</li>
-                <li id="gridItem">Lore Ideas</li>
-                <li id="gridItem">Champion Design</li>
-                <li id="gridItem">Champion Abilities</li>
-                <li id="gridItem">Champion Voice Lines</li>
-                <li id="gridItem">Summarize</li>
+                <li id="important">Brainstorm Champion Ideas</li>
+                <li>Narrow Ideas Down</li>
+                <li id="important">Lore Ideas</li>
+                <li>Champion Design</li>
+                <li id="important">Champion Abilities</li>
+                <li>Champion Voice Lines</li>
+                <li>Summarize</li>
             </ol>
             <h2><u>Unfinished Discussion</u></h2>
             <ul>
@@ -60,6 +60,7 @@
                     <h3 style="text-decoration: blink;" id="newZoom"><b>Zoomink</b></h3>
                     <p>Zoomink will be <em>very zoomy fast</em> and ink at her opponents!</p>
                     <img src="images/Zoomink_Champion.PNG" height="200" width="200" alt="pink-squid" id="zoompic"> 
+                    <p>Zoomink is a new edition to the yordle family.</p>
                     <br>
                     <audio controls src="ZoominkAudio.mp3"></audio>
                     <br>
